--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,19 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
+ 
 
   <body>
+ <% if user_signed_in? %>
+        <p id="current_user_email"><%= current_user.email %></p>
+        <p><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></p>
+
+        <% else %>
+
+        <p><%= link_to "Sign In", new_user_session_path %></p> 
+
+          <p><%= link_to "Sign Up", new_user_registration_path %></p>
+        <% end %>
     <%= yield %>
   </body>
 </html>
