--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -45,6 +45,10 @@
     <%= form.label :mobile %>
     <%= form.number_field :mobile %>
   </div>
+  <div class="field">
+    <%= form.label :User_id %>
+    <%= form.number_field :user_id %>
+  </div>
 
   <div class="actions">
     <%= form.submit %>
