--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,8 +1,9 @@
+<% if user_signed_in? %>
 <p id="notice"><%= notice %></p>
 
 <h1>Students</h1>
 
-<table>
+<table border="1">
   <thead>
     <tr>
       <th>Name</th>
@@ -12,6 +13,7 @@
       <th>Sem</th>
       <th>Email</th>
       <th>Mobile</th>
+      <th>User_id</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -26,6 +28,7 @@
         <td><%= student.sem %></td>
         <td><%= student.Email %></td>
         <td><%= student.mobile %></td>
+         <td><%= student.user_id %></td>
         <td><%= link_to 'Show', student %></td>
         <td><%= link_to 'Edit', edit_student_path(student) %></td>
         <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -37,3 +40,5 @@
 <br>
 
 <%= link_to 'New Student', new_student_path %>
+<% end %>
+
